Attempt 2 - production bug on iphones whereby media-scroller not scrolling. Added overflow propertie to body.

--- a/c2_main_app/static/c2_main_app/styles/_setup.scss
+++ b/c2_main_app/static/c2_main_app/styles/_setup.scss
@@ -49,7 +49,6 @@ html {
     color: $offBlack;
     font-size: $baseFontSize;
     background-color: white;
-    scroll-behavior: smooth;
 }
 
 
@@ -68,6 +67,9 @@ body {
     margin: 0 auto;
     background-color: $offWhite;
     overscroll-behavior: none;
+
+    overflow-x: auto;
+    scroll-behavior: smooth;
 
     main {
         background-color: $offWhite;
